# ml-zoomcamp-kaggle-fake-news

./: .gitignore  CSV_issue.ipynb  Dockerfile  ExploreDataset.ipynb  Pipeline.ipynb  README.md  fly.toml  model_api_test_cases.py  pyproject.toml  pytest.ini  serve.py  text_clean_up_test_cases.py  text_utils.py
src/: serve.py
test/: model_api_test_cases.py  model_utils_test_cases.py
